Completed Project without deployment and suggestions

--- a/eTickets/appsettings.json
+++ b/eTickets/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "eTicketsContext": "Server=(localdb)\\mssqllocaldb;Database=eTicketsContext;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
